--- a/src/WhoWeAre.css
+++ b/src/WhoWeAre.css
@@ -56,3 +56,10 @@
   object-fit: cover;
   border-radius: 10px;
 }
+@media (max-width: 768px) {
+  .who-container{
+  flex-direction: column;
+  padding: 20px;
+  text-align: center;
+  }
+}
