--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,14 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .contact-section {
   width: 100%;
   background: #0d0d0d;
   color: white;
-  padding: 80px 50px;
+  padding: 80px 0px;
   font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+  
 }
 
 .contact-container {
   max-width: 1300px;
   margin: 0 auto;
+  margin-left: 50px;
+
+  
 }
 
 /* HEADER */
@@ -43,8 +53,8 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 70px;
+  flex-wrap: wrap; /* ✅ prevents overflow */
 }
-
 /* INFO */
 .contact-info {
   display: flex;
@@ -159,6 +169,7 @@
   .contact-main {
     flex-direction: column;
     gap: 50px;
+    
   }
 
   .office-card {
