--- a/src/Footer.css
+++ b/src/Footer.css
@@ -65,13 +65,12 @@
 }
 @media (max-width: 768px) {  
   .footer-container{
-  flex-direction: column;
-  padding: 60px;
-  text-align: center;
-  margin-right: 100px;
+    flex-direction: column;
+    text-align: center;
+    padding: 0;   /* ✅ reset */
   }
+
   .footer-bottom{
     text-align: center;
-    flex-direction: column;
   }
 }
