--- a/src/Footer.css
+++ b/src/Footer.css
@@ -32,7 +32,7 @@
   line-height: 1.7;
   max-width: 280px;
 }
-
+ 
 .footer-column {
   min-width: 180px;
 }
@@ -63,14 +63,16 @@
   color: #aaa;
   font-size: 14px;
 }
+
 @media (max-width: 768px) {  
   .footer-container{
     flex-direction: column;
     text-align: center;
-    padding: 0;   /* ✅ reset */
+    padding: 0;   
   }
 
   .footer-bottom{
     text-align: center;
+
   }
 }
