--- a/src/WhoWeAre.css
+++ b/src/WhoWeAre.css
@@ -1,7 +1,10 @@
-.who {
-  padding: 120px 0;
-  background: white;
+section {
+  margin: 0;
 }
+.who {
+  padding: 120px 0 0 0;
+}
+
 
 .who-container {
   width: 90%;
@@ -52,14 +55,60 @@
 }
 .who-image img {
   width: 100%;
-  height: 120%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
+  
 }
 @media (max-width: 768px) {
   .who-container{
   flex-direction: column;
   padding: 20px;
   text-align: center;
+  }
+}
+
+/* SPACE BETWEEN SECTIONS */
+.who-stats {
+  background: #000;
+  color: #fff;
+  padding: 80px 0;
+  margin: 0;
+}
+
+/* Container */
+.stats-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  gap: 40px;
+}
+
+/* Stat box */
+.stat-box {
+  flex: 1;
+}
+
+/* Numbers */
+.stat-number {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  font-family: 'Playfair Display', serif;
+}
+
+.stat-box p {
+  color: #ccc;
+  font-size: 18px;
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+  .stats-container {
+    flex-direction: column;
+    gap: 50px;
   }
 }
